--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
+  <meta name="google-site-verification" content="vtI7GuUhhY29cKNUEcko5FuM8jhKKEI0wRckfexqdiY" />
   <title>Fast Facts Grid Grader</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
